--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 .page-wrapper {
     width: 100dvh;
 }
+
+.input-group {
+    width: unset;
+}
+
+.coffee-form {
+    background-color: white;
+    position: absolute;
+    top: 25%;
+    right: 25%;
+    border: 1px solid black;
+}
