--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
-.page-wrapper {
-    width: 100dvh;
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css") layer(framework);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-.input-group {
-    width: unset;
+.page-wrapper {
+    background-image:url("../img/coffee2.png");
+    background-size: auto;
 }
 
 .coffee-form {
@@ -18,7 +21,17 @@
 .active {
     visibility: visible;
 }
+#search{
+    position: fixed;
+    right: 20px;
+    top: 10px;
 
-.roast-select {
-    color: red;
+}
+#coffee-body{
+    min-height: 100dvh;
+}
+.btn-secondary{
+    background-color: chocolate;
+    padding:0 15px;
+
 }
