--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,10 @@
     background-color: chocolate;
     padding:0 10px;
     height: 30px;
+    border-radius: 10px;
 }
-#cup{
- width: 50px;
+#cup {
+    width: 50px;
     height: 50px;
 }
 
