--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css") layer(framework);
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,15 +8,19 @@
 .page-wrapper {
     background-image:url("../img/coffee2.png");
     background-size: auto;
+    font-family: 'Agbalumo', serif;
 }
 
 .coffee-form {
-    background-color: white;
+    background-color: #d2b48c;
     position: absolute;
     top: 25%;
     right: 25%;
     border: 1px solid black;
     visibility: hidden;
+    min-height: 300px;
+    border-radius: 15px;
+    text-align: center;
 }
 
 .active {
@@ -29,6 +34,7 @@
 }
 #coffee-body{
     min-height: 100dvh;
+    margin:0 20%;
 }
 .btn-secondary{
     background-color: chocolate;
@@ -39,6 +45,12 @@
 #cup {
     width: 50px;
     height: 50px;
+}
+h1 {
+    color: #333; /* Dark gray text color */
+    text-align: center;
+    font-size: 2.5em; /* Adjust the font size as needed */
+    margin-bottom: 20px; /* Bottom margin for spacing */
 }
 
 
