--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,13 @@ header p {
     height: 50px;
 }
 h1 {
-    color: #333; /* Dark gray text color */
+    color: #333;
     text-align: center;
-    font-size: 2.5em; /* Adjust the font size as needed */
-    margin-bottom: 20px; /* Bottom margin for spacing */
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    transition: transform 0.3s ease, text-shadow 0.3s ease;
+    transform: scale(1.2);
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 
