--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,10 @@
 .coffee-form {
     background-color: #d2b48c;
     position: absolute;
-    top: 30%;
-    right: 20%;
+    top: 50%;
+    right: 50%;
+    margin-top: -150px;
+    margin-right: -150px;
     border: 5px solid chocolate;
     visibility: hidden;
     min-height: 300px;
