--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,17 @@ header p {
     font-size: 18px;
 }
 #cup {
-    width: 50px;
-    height: 50px;
+    /*background-color: ;*/
+    width: 40px;
+    height: 40px;
+}
+
+#form-btn {
+    position: absolute;
+    right: 20px;
+    top: 60px;
+    background-color: transparent;
+    border-radius: 9999%;
 }
 h1 {
     color: #333;
@@ -99,6 +108,15 @@ h1 {
     transition: transform 0.3s ease, text-shadow 0.3s ease;
     transform: scale(1.2);
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+}
+footer{
+    position: fixed;
+    background-color: rgba(210, 105, 30, 0);
+    color: black;
+    padding: 0 20%;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid black;
 }
 
 
